--- a/index.html
+++ b/index.html
@@ -1,17 +1,126 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>
-		My First Web Page
-	    </title>
-	</head>
+<!--
+  Name: Siegfred Madeghe.
+  Assignment 5
+  Date: 2/22/2020
 
-	<body>
-		<h1> Contacts: </h1>
-		<p> Name:  Siegfred. 		   		<br>
-			Major: Computer Engineering.	<br>
-			IP Address: 130.64.25.57		<br>
-			From:  Medford, Massachussets.	<br>
-		</p>
-	</body>
+  Comments: Given some recommendations on the good
+        practices of writing a Javascript file
+        separately, my meth0d--including the sc-
+        ript in the HTML cod--might not be impr-
+        essive. However, since the assignment w-
+        as not as much completed, I thought this
+        method would not be a bad approach.
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Amicable</title>
+  <h1 style="font-size: 30 px"> Welcome to Taftz Math Engine! </h1>
+</head>
+<body>
+  <header>
+    <h2 style="font-size: 30 px">Please Input Your Numbers Below</h2>
+    <form id="my_form">
+        <label for="num_first">First Number:</label><br>
+        <input type="text" id="num_chosen" name="num_chosen"><br><br>
+        <label for="num_secomd">Second Number:</label><br>
+        <input type="text" id="num_amec" name="num_amec"> <br> <br>
+        <input type="submit" value="Submit" onsubmit="myFunction()">
+    </form>
+
+    <p id="fun_impl">
+      <script>
+      /* 
+      This script implements one of the importance of using Java-
+      scrip: data manipulation. Therefore, in this script, users
+      will be asked for some inputs which will be used to calcula-
+      te some required information.
+      */
+      var num_first  = document.getElementById("num_chosen");
+      var num_secomd = document.getElementById("num_amec");
+      function myFactor(fact, num) {
+        var my_value = false;
+        if (num % fact === 0)
+        {
+          my_value = true;
+        }
+      return my_value;
+      /*
+    My Test Cases:
+    console.log(myFactor(3, 15));   // true
+    console.log(myFactor(15, 64));  // false
+    console.log(myFactor(1,17));    // true
+    */
+    }
+
+    function showFactors(my_arr[]) {
+      var len = my_arr.length;
+      for (var i = 0; i < len; i++) {
+        document.write(my_arr[i]);
+      }
+      /* My Test Cases:
+      console.log([1 2 3 4 5 ]); // 1, 2, 3, 5
+      console.log([23 4 1 3 2]); // 23, 4, 1, 3, 2
+      */
+    function addFactors(my_arr[]) { 
+      var len = my_arr.length;
+      var sum = 0;
+      for (var i = 0; i < len; i++) {
+        sum =+ my_arr[i];
+      }
+      return sum;
+    }
+     /* My Test Cases:
+      console.log([1 2 3 4 5 ]); // 15
+      console.log([23 4 1 3 2]); // 34
+      */
+
+    function getFactors(n)
+    {
+      var num_factors = [], i;
+      for (i = 1; i <= Math.floor(Math.sqrt(n)); i += 1)
+        if (n % i === 0)
+        {
+          num_factors.push(i);
+          if (n / i !== i)
+            num_factors.push(n / i);
+        }
+      num_factors.sort(function(x, y)
+      {
+        return x - y;});  // numeric sort
+    return num_factors;
+    }
+    /*
+      console.log(factors(15));  // [1,3,5,15] 
+      console.log(factors(16));  // [1,2,4,8,16] 
+      console.log(factors(17));  // [1,17]
+      */
+
+    function determineAmic(num1, num2) {
+      // Declare the local variables:
+      var vec1 = getFactors(num1), vec2 = getFactors(num2);
+      var sum1 = addFactors(vec1), sum2 = addFactors(vec2);
+      var amec = false;
+      // Compare the numbers:
+      if (sum1 == num2 && sum2 == num1) {
+        amec = true;
+      }
+      return amec;
+    }     
+
+    function myFunction(num_chosen, num_amec) {
+      if (determineAmic(num_chosen, num_amec)) {
+        document.write (
+           "The numbers " + num_chosen + " and " + num_amec + " are amicable, because" +
+           "the factors of " + num_chosen + " are " +  getFactors(num_chosen) + " and sum " +
+           " to " + addFactors(getFactors(num_chosen)) + ",while the factors of " + num_amec +
+           " are " + getFactors(num_amec) + " and sum to " + addFactors(getFactors(num_chosen) +
+            " ." );
+      }
+
+      </script>
+    </p>
+  </header>
+</body>
 </html>
